# spa-app

./: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
comments/: admin.py  models.py  permissions.py  serializers.py  test_comments.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_user.py  0002_initial.py
spa/: settings.py  urls.py
users/: urls.py  views.py
users/migrations/: 0001_initial.py
